--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -15,5 +15,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: lein deps
-    - name: Run tests
+    - name: Run clj tests
       run: lein cloverage --no-html
+    - name: Install Karma CLI
+      run: npm install -g karma-cli
+    - name: Install other packages
+      run: npm install
+    - name: Run cljs tests
+      run: lein doo once
